--- a/MyPlaces/app/src/main/res/values/strings.xml
+++ b/MyPlaces/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <string name="editmyplace_name_label">Name:</string>
+    <string name="editmyplace_desc_label">Description:</string>
+    <string name="editmyplace_cancle_label">Cancle</string>
+
+    <string name="viewmyplace_finished_button">OK</string>
 </resources>
