dodata treca lab vezba

--- a/MyPlaces/app/src/main/res/values/strings.xml
+++ b/MyPlaces/app/src/main/res/values/strings.xml
@@ -23,6 +23,11 @@
     <string name="editmyplace_name_label">Name:</string>
     <string name="editmyplace_desc_label">Description:</string>
     <string name="editmyplace_cancle_label">Cancle</string>
+    <string name="editmyplace_lat_label">Latitude:</string>
+    <string name="editmyplace_lon_label">Longitude:</string>
+    <string name="editmyplace_location_label">Get Location</string>
+    
 
     <string name="viewmyplace_finished_button">OK</string>
+    <string name="title_activity_my_places_maps">Map</string>
 </resources>
